# adminyo

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: publish-native.yml
cli/: .gitignore  Cargo.toml
cli/assets/ui/: index.html
cli/assets/ui/assets/: index-BfUPjR1e.js  index-CjAtNs2F.js  index-KhdX9S9h.css
cli/src/: main.rs  state.rs  watcher.rs
cli/src/config/: mod.rs  schema.rs
cli/src/embedded/: mod.rs
cli/src/server/: auth.rs  mod.rs  proxy.rs  routes.rs  ws.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: build-all-native.sh  sync-native-bin.js
ui/: .gitignore  REDESIGN_NOTES.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite-plugin-mock-api.d.ts  vite-plugin-mock-api.js  vite-plugin-mock-api.ts  vite.config.js  vite.config.ts
ui/mock/: mockData.d.ts  mockData.js  mockData.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: ActionsBar.tsx  DataTable.tsx  EntityView.tsx  Filters.tsx  Layout.tsx  Login.tsx  Navbar.tsx  Sidebar.tsx
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  Input.tsx  Pagination.tsx  Skeleton.tsx  Spinner.tsx  Table.tsx
ui/src/hooks/: useConfig.ts  useProxyFetch.ts  useReloadSocket.ts  useWebSocket.ts
ui/src/lib/: api.ts  brandingColor.ts
ui/src/types/: config.d.ts  config.ts
ui/src/utils/: csv.ts  jsonRows.ts
