[package]
name = "adminyo-cli"
version = "0.2.0"
edition = "2021"
description = "Adminyo admin panel CLI and server"

[[bin]]
name = "nyo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "ws"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
notify = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
subtle = "2"
tokio = { version = "1", features = ["full", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
